kubernetes/apps/default/home-assistant/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-assistant
spec:
  parentRefs:
    - name: envoy-gateway-local
      namespace: network
      sectionName: https
    - name: envoy-gateway-public
      namespace: network
      sectionName: https
  hostnames:
    - www.egenintres.se
    - egenintres.se
  rules:
    - backendRefs:
        - name: home-assistant
          port: 8123
